# makinilya

./: .markdownlint.json  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: book.toml
docs/src/: 02_config-manifest.md  SUMMARY.md  introduction.md
makinilya-cli/: Cargo.toml
makinilya-cli/src/: main.rs  style.rs
makinilya-cli/wix/: main.wxs
makinilya-core/: Cargo.toml
makinilya-core/mock/: Config.toml  Context.toml
makinilya-core/mock/01-standard-project/: Config.toml  Context.toml
makinilya-core/mock/01-standard-project/draft/Chapter 1/: 01.mt
makinilya-core/mock/draft/: 01_hello.mt
makinilya-core/mock/draft/Chapter 1/: 01.mt
makinilya-core/mock/draft/Chapter 2/: 02.mt
makinilya-core/mock/draft/test/: 01_world.mt
makinilya-core/sample/: Config.toml  Context.toml
makinilya-core/sample/draft/Chapter 1/: Scene 1.mt
makinilya-core/src/: builder.rs  config.rs  context.rs  core.rs  defaults.rs  extensions.rs  files.rs  interpolator.rs  lib.rs  parser.rs  story.rs  units.rs  utility.rs
makinilya-core/src/grammar/: markdown.pest
makinilya-core/src/lib/: builder.rs  context.rs  core.rs  extensions.rs  files.rs  interpolator.rs  story.rs  units.rs
makinilya-core/tests/: file_handler.rs  markdown_parser.rs
makinilya-core/tests/mock/01_part-1/: 01_hello.md
makinilya-core/tests/mock/draft/01_part-1/01_chapter-1/: 01_hello.mt
makinilya-text/: Cargo.toml
makinilya-text/src/: lib.rs
makinilya-text/src/grammar/: makinilya.pest
makinilya/src/lib/: config.rs  mod.rs
