[package]
name = "makinilya-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
pest = "2.7.5"
serde = "1.0.193"
docx-rs = "0.4.7"
thiserror = "1.0.50"
colored = "2.1.0"
zip = "0.6.6"

makinilya-text = { path = "../makinilya-text" }
