[package]
name = "makinilya"
version = "0.1.0-alpha.3"
edition = "2021"
description = "An austere manuscript generator for writers"
authors = ["Daveren Cordero <daverencordero@gmail.com>"]
repository = "https://github.com/coreapostrophe/makinilya"

[lib]
name = "makinilya"
path = "./src/lib/mod.rs"

[[bin]]
name = "makinilya"
path = "./src/bin/cli.rs"

[dependencies]
toml = "0.8.8"
pest = "2.7.5"
serde = "1.0.193"
docx-rs = "0.4.7"
thiserror = "1.0.50"
colored = "2.1.0"
zip = "0.6.6"
anstyle = "1.0.4"
clap = { version = "4.4.10", features = ["derive"] }

makinilya-text = { path = "../makinilya-text" }
